--- a/src/app/[lang]/globals.css
+++ b/src/app/[lang]/globals.css
@@ -18,3 +18,15 @@
 select:focus {
     outline: none;
 }
+
+::-webkit-scrollbar {
+    width: 5px;
+}
+::-webkit-scrollbar-track {
+    background: transparent;
+}
+::-webkit-scrollbar-thumb {
+    background-color: rgba(155, 155, 155, 0.5);
+    border-radius: 20px;
+    border: transparent;
+}
