--- a/src/app/[locales]/globals.css
+++ b/src/app/[locales]/globals.css
@@ -327,6 +327,17 @@ tbody tr td {
     margin-bottom: 10px;
 }
 
+.shipping-address {
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: #f9f9f9;
+}
+
+.shipping-address input {
+    background-color: #f9f9f9;
+}
+
 /* Media queries */
 
 .burger-builder {
