--- a/src/app/[locales]/globals.css
+++ b/src/app/[locales]/globals.css
@@ -15,6 +15,10 @@
     --color-gray-400: rgba(163, 163, 163, 1);
 }
 
+body {
+    overflow: auto !important;
+}
+
 select:focus {
     outline: none;
 }
